src/assets/css/style.css
/* ... */
.reasons-area .heading-area,
.strategies-area .heading-area {
  flex-direction: row;
}
.feature-card {
  background-color: #0c1e3f;
  padding: 23px 22px;
  border-radius: 15px;
  display: flex;
  align-items: center;
  gap: 10px;
  width: 412px;
}

.feature-card-icon {
  background-image: linear-gradient(to right, #e101ff, #7f01ff);
  border-radius: 10px;
  width: 40px;
  height: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-shrink: 0;
}

.feature-card-icon i {
  color: var(--white_color);
  font-size: 18px;
}

.feature-card-title {
  color: var(--white_color);
  font-size: 16px;
  font-weight: 500;
  margin: 0;
}

.feature-card-row {
  display: flex;
  justify-content: space-between;
  gap: 20px;
  padding: 20px;
}

/* why us */
.colored-text {
  color: #9000ff !important;
  font-weight: 700;
  margin-bottom: 0px;
}

.icon-image {
  width: 100px;
  transition: transform 0.3s ease-in-out;
}

.title {
  font-size: 32px;
  font-weight: 700;
}

.description {
  font-size: 20px;
  margin-bottom: 0px;
}

.arrow-btn {
  width: 40px;
  height: 40px;
  border: 1px solid white;
  display: flex;
  flex-shrink: 0;
  justify-content: center;
  align-items: center;
  background-color: inherit;
  color: white;
  position: relative;
  margin: auto;
}

/* .section-container:hover .arrow-btn::after {
  content: '';
  position: absolute;
  color: white;
  background-color: red;
}

.section-container:hover .icon-image {
  transform: scale(2);
} */

.moving-gradient {
  position: absolute;
  top: -250px;
  left: 0;
  width: 500px;
  height: 500px;
  background-image: linear-gradient(0.2turn, #00d9ff, 10%, #9000ff);
  filter: blur(123.8px);
  border-radius: 50%;
  transform-origin: center;
  z-index: -1;
  background-size: 200% 200%;
  animation: move-gradient-across 15s linear infinite alternate;
}

@keyframes move-gradient-across {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(calc(100vw - 500px));
  }
}

.section-gradient {
  position: absolute;
  width: 400px;
  height: 400px;
  background-image: linear-gradient(
    0.45turn,
    #3700ff 20%,
    #ff0099,
    40%,
    #ff0099
  );
  filter: blur(115.8px);
  border-radius: 50%;
  transform-origin: center;
  z-index: -1;
  transform: rotate(40.33deg);
  background-size: 200% 200%;
}
.section-gradient-left {
  left: -250px;
}
.section-gradient-right {
  right: -250px;
  transform: scaleX(-1);
}

.outer_circle {
  position: relative;
  width: 100%;
  right:0;
  height: 200px;
  border-radius: 50%;
  background: #000;
  overflow: hidden; 
  z-index: 1; 
    filter: blur(20.8px);
  
}

.inner_circle {
  background-image: linear-gradient(
    to right,
 #5700FF80 0%,
  #2F00FF80  100%
  );
  content: '';
  position: absolute;
  top: 40%; 
  height: 400%; 
  left: 0; 
  right: 0;
  z-index: 0;
}

